# simple-ocr

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
