[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Dima Krutolianov <DimaKrutDK@ya.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "^2.7.0"
scikit-image = "^0.19.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
